--- a/kcse2023.css
+++ b/kcse2023.css
@@ -66,11 +66,13 @@ input[type="checkbox"] {
   font-size: 35px;
   position: relative;
   margin: 10px 50px 0 50px;
+  font-weight: bold;
 }
 section {
   display: flex;
   flex-direction: column;
   background: rgba(209, 202, 202, 0.2);
+  padding: 20px;
 }
 .intro {
   display: block;
@@ -80,6 +82,7 @@ section {
   color: #000;
   font-size: 25px;
   margin: 10px 0 10px 80px;
+  font-weight: bold;
 }
 .intro p {
   font-size: 25px;
@@ -89,7 +92,7 @@ section {
   margin: 0 0 10px 50px;
   font-size: 20px;
   text-decoration: none;
-  color: rgb(5, 128, 128);
+  color: rgb(5, 20, 238);
 }
 .content {
   margin: 30px 20px;
@@ -106,7 +109,12 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 50px;
+  margin: 50px 0 40px 50px;
+}
+.content h2{
+  font-weight: bold;
+  margin-bottom: 20px;
+  font-size: 30px;
 }
 .content img {
   width: 900px;
@@ -114,7 +122,7 @@ section {
 .tbl_lnk {
   display: block;
   font-size: 25px;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 .tables_lnk {
   text-decoration: none;
