--- a/style.css
+++ b/style.css
@@ -156,6 +156,14 @@ section {
 }
 .cs_content a {
   margin-top: 30px;
+  color: blue;
+}
+.endnote{
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
 }
 footer {
   display: block;
