--- a/tables.css
+++ b/tables.css
@@ -12,7 +12,7 @@ nav {
   display: flex;
   height: 80px;
   width: 100%;
-  background: rgb(35, 65, 131);
+  background: rgba(8, 3, 248, 0.9);
   align-items: center;
   justify-content: space-between;
   padding: 0 50px 0 100px;
@@ -64,9 +64,9 @@ input[type="checkbox"] {
   display: none;
 }
 .tables {
-  width: 70%;
+  width: 80%;
   position: relative;
-  left: 9%;
+  left: 4%;
   right: 0;
   display: flex;
   flex-direction: column;
@@ -115,6 +115,10 @@ ul {
 .shots_img img:hover {
   transform: scale(1.3, 1.3);
 }
+.screenshots h3{
+  font-weight: bold;
+  font-size: 40px;
+}
 .tbl_lnk {
   display: block;
   font-size: 25px;
@@ -131,6 +135,9 @@ ul {
   left: 7%;
   top: 15px;
   color: #fff;
+}
+.footnote{
+  margin-top: 30px;
 }
 .tbl_lnk p {
   margin-left: 100px;
