--- a/Queries.css
+++ b/Queries.css
@@ -172,6 +172,7 @@ footer {
 .links .foot-head {
   font-size: 20px;
   font-family: "kanit";
+  font-weight: bold;
 }
 .social-media a {
   text-decoration: none;
