--- a/kcse2023.css
+++ b/kcse2023.css
@@ -160,6 +160,7 @@ footer {
 .links .foot-head {
   font-size: 20px;
   font-family: "kanit";
+  font-weight: bold;
 }
 .social-media a {
   text-decoration: none;
