--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ footer {
 .links .foot-head {
   font-size: 20px;
   font-family: "kanit";
+  font-weight: bold;
 }
 .social-media a {
   text-decoration: none;
