--- a/tables.css
+++ b/tables.css
@@ -125,7 +125,7 @@ ul {
   margin-bottom: 40px;
   margin-top: 30px;
 }
-.tables_lnk {
+.tables_lnk_continue {
   text-decoration: none;
   font-size: 20px;
   padding: 15px 50px;
@@ -135,6 +135,24 @@ ul {
   left: 7%;
   top: 15px;
   color: #fff;
+}
+.tables_lnk_back {
+  text-decoration: none;
+  font-size: 20px;
+  padding: 15px 50px;
+  background-color: blue;
+  border-radius: 5px;
+  position: relative;
+  left: 65%;
+  top: 15px;
+  color: #fff;
+}
+.tbl_lnk p {
+  margin-left: 100px;
+  margin-bottom: 10px;
+}
+.tbl_lnk i {
+  margin: 10px;
 }
 .footnote{
   margin-top: 30px;
@@ -164,6 +182,7 @@ footer {
 .links .foot-head {
   font-size: 20px;
   font-family: "kanit";
+  font-weight: bold;
 }
 .social-media a {
   text-decoration: none;
